# FeNAl

./: .gitignore  CMakeLists.txt  README.md
include/number/: Function.h  Functional.h  Integer.h  Mat.h  Matrix.h  Number.h  Real.h  UInteger.h  algrm.h  block.h  common.hpp
include/signal_processing/: Kalman.h
include/tools/: timer.h
src/: CMakeLists.txt
src/FFT_profile/: CMakeLists.txt  main.cpp
src/number/: CMakeLists.txt  Integer.cpp  Real.cpp  UInteger.cpp
src/remainder_theorem/: CMakeLists.txt  main.cpp
src/signal_processing/: CMakeLists.txt  Kalman.cpp
src/test/: CMakeLists.txt  TestForAlgorithm.cpp  TestForInteger.cpp  TestForIntegration.cpp  TestForKalman.cpp  TestForMat.cpp  TestForMatrix.cpp  TestForPolynomial.cpp  TestForReal.cpp
